eggenberg-reverse-proxy-cluster/argocd-apps-configuration/pmhme/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio
spec:
  selector:
    app: portfolio-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
