eggenberg-reverse-proxy-cluster/argocd-apps-configuration/pmhme/base/ingress.yaml
# yamllint disable rule:line-length
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: portfolio
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-ratelimit@kubernetescrd,traefik-secure-headers@kubernetescrd,traefik-cloudflare-ip-whitelist@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: hauptmann.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-service
                port:
                  number: 80
# yamllint enable rule:line-length
